--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "jwt-decode": "^3.1.2",
     "pinia": "^2.1.4",
     "vue": "^3.3.4",
     "vue-router": "4"
